# ananya_industries

./: .gitignore
backend/: .env  .gitignore  Cargo.toml
backend/src/: db.rs  main.rs
backend/src/api/: auth.rs  contact.rs  mod.rs
backend/src/models/: auth.rs  contacts.rs  mod.rs  products.rs  users.rs
backend/src/routes/: auth.rs  contact.rs  cost_estimator.rs  dashboard.rs  mod.rs  users.rs
backend/src/utils/: auth.rs
frontend/: Cargo.toml  build.sh  index.html  netlify.toml
frontend/public/: dashboard.css  login.css  style.css
frontend/src/: app.rs  main.rs
frontend/src/components/: contact_form.rs  mod.rs  navbar.rs
frontend/src/models/: avatar.rs
frontend/src/pages/: contact_us.rs  dashboard.rs  homepage.rs  mod.rs  packaging_box.rs
frontend/src/pages/auth/: auth.rs  login.rs  mod.rs  signup.rs
frontend/src/pages/dashboard/: dashboard.rs  get_contact.rs  mod.rs
frontend/src/pages/homepage/: homepage.rs  mod.rs
