[package]
name = "backend"
version = "0.1.0"
edition = "2024"
# Cargo.toml

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"

# sqlx ke liye postgres + chrono enable karna zaroori hai
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

chrono = { version = "0.4", features = ["serde"] }
tower = "0.5.2"
anyhow = "1.0.98"
